<resources>

    <string name="app_name">Pumpkin Reader</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_feedback">Feedback</string>
    <string name="title_activity_news_detail">News</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_web_view">News Article</string>
    <string name="pumpkinz_about"><b>Pumpkinz</b> \nhttp://pumpkinz.io \n\n<b>wiseodd</b> \nhttps://github.com/wiseodd \n\n<b>timotiusnc</b> \nhttps://github.com/timotiusnc</string>
    <string name="pumpkinz_credits"><b>Retrofit</b> \nhttps://github.com/square/retrofit\n\n<b>RxJava</b> \nhttps://github.com/ReactiveX/RxJava\n\n<b>RxAndroid</b> \nhttps://github.com/ReactiveX/RxAndroid\n\n<b>Pumpkin Icon</b> \nhttp://www.iconarchive.com/show/windows-8-icons-by-icons8/Holidays-Pumpkin-icon.html</string>
    <string name="comments">Comments</string>
    <string name="link">Link</string>
    <string name="open_link">Open Link</string>
    <string name="save">Save</string>
    <string name="unsave">Unsave</string>
    <string name="undo">Undo</string>
    <string name="goto_comments">Go to Comments</string>

    <string name="about">About</string>
    <string name="credits">Credits</string>
    <string name="rate">Rate</string>
    <string name="share">Share</string>

    <string name="saved">Saved News</string>
    <string name="top">Top News</string>
    <string name="recent">Recent News</string>
    <string name="ask_hn">Ask HN</string>
    <string name="show_hn">Show HN</string>
    <string name="job">HN Jobs</string>

    <string name="saved_news">Added to saved list</string>
    <string name="unsaved_news">Removed from saved list</string>

    <plurals name="comments">
        <item quantity="zero">%d comment</item>
        <item quantity="one">%d comment</item>
        <item quantity="other">%d comments</item>
    </plurals>

    <string name="timeout">Connection Timeout. Please try again.</string>
    <string name="endoflist">You have reached the end of list.</string>
    <string name="unknown">Unknown error occured. Please try again.</string>

    <!--Begin Time Ago Strings-->
    <string name="time_ago_prefix"></string>
    <string name="time_ago_suffix"></string>

    <string name="time_ago_seconds">just now</string>
    <string name="time_ago_minute">1 minute</string>
    <string name="time_ago_hour">1 hour</string>
    <string name="time_ago_day">1 day</string>
    <string name="time_ago_month">1 month</string>
    <string name="time_ago_year">1 year</string>

    <plurals name="time_ago_minutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <plurals name="time_ago_hours">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="time_ago_days">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <plurals name="time_ago_months">
        <item quantity="one">%d month</item>
        <item quantity="other">%d months</item>
    </plurals>
    <plurals name="time_ago_years">
        <item quantity="one">%d year</item>
        <item quantity="other">%d years</item>
    </plurals>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_news_comments">News</string>
    <!--End Time Ago Strings-->

</resources>
