<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_open"
        android:orderInCategory="100"
        android:title="@string/open_link"
        android:icon="@drawable/ic_public_white_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_save"
        android:orderInCategory="200"
        android:title="@string/save"
        android:icon="@drawable/ic_bookmark_border_white_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_share"
        android:orderInCategory="300"
        android:title="@string/share"
        android:icon="@drawable/ic_share_white_24dp"
        app:showAsAction="ifRoom" />

</menu>